fixing flexbox gap in safari

--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,12 @@
 }
 
 /* **************************** */
-/* STICKY NAVIGATIO */
+/* STICKY NAVIGATION */
 /* **************************** */
 .sticky .header {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(5px);
+  background-color: rgb(255, 255, 255, 0.6);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -85,7 +88,6 @@
   height: 8rem;
   padding-top: 0;
   padding-bottom: 0;
-  background-color: rgb(255, 255, 255, 0.97);
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.3);
 }
